# informix-rust

./: Cargo.toml  README.md  build.rs
examples/: simple_query.rs
src/: async_connection.rs  async_connection_pool.rs  connection.rs  connection_pool.rs  domain.rs  errors.rs  lib.rs
src/domain/: base_params.rs  c_binds.rs
