[package]
name = "informix_rust"
description = "InformixRust is a Rust library that provides a safe and efficient way to interact with Informix databases. It wraps the Informix CSDK (Client SDK) to offer a more Rust-friendly interface for database operations."
version = "0.0.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/berrytern/informix-rust"
readme = "README.md"
authors = ["João Pedro Miranda C. Hluchan <berrytern@gmail.com>"]
categories = [
    "database",
    "external-ffi-bindings",
    "network-programming"
]
keywords = [
    "informix", 
    "client-sdk", 
    "database", 
    "sql", 
    "csdk",
]

[dependencies]
libc = "0.2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1.0"
